--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,8 +22,7 @@ jobs:
       run: |
         curl -L https://raw.githubusercontent.com/apigee/apigeecli/main/downloadLatest.sh | sh
         export PATH=$PATH:$HOME/.apigeecli/bin
-        apigeecli version
-      
+        apigeecli --help
     # ----------------------
     # 1. KVMs
     # ----------------------
