--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,8 +54,8 @@ jobs:
 
     - name: Import & Deploy SharedFlow
       run: |
-        apigeecli sharedflows create bundle   --org ${{ secrets.APIGEE_ORG }}   --env ${{ secrets.APIGEE_ENV }}  --name "SF-Security"  -p sharedflows/SF-Security   --ovr --wait   
-        # apigeecli sharedflows import           --org ${{ secrets.APIGEE_ORG }}           -f sharedflows/SF-Security -r
+        #apigeecli sharedflows create bundle   --org ${{ secrets.APIGEE_ORG }}   --env ${{ secrets.APIGEE_ENV }}  --name "SF-Security"  -p sharedflows/SF-Security   --ovr --wait   
+        apigeecli sharedflows import           --org ${{ secrets.APIGEE_ORG }}           --folder sharedflows/SF-Security -r
 
         # apigeecli sharedflows deploy           --org ${{ secrets.APIGEE_ORG }}           --env ${{ secrets.APIGEE_ENV }}           --name SF-Security
 
