--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,11 +52,31 @@ jobs:
       run: |
         apigeecli organizations list
 
-    - name: Import & Deploy SharedFlow
+    - name: Import & Deploy All SharedFlows
       run: |
-        apigeecli sharedflows import           --org ${{ secrets.APIGEE_ORG }}           --folder sharedflows/SF-Security  
+          for sf in sharedflows/*; do
+            if [ -d "$sf/sharedflowbundle" ]; then
+              SF_NAME=$(basename "$sf")
+              echo "Deploying shared flow: $SF_NAME"
+      
+              # Import shared flow
+              apigeecli sharedflows import \
+                --org ${{ secrets.APIGEE_ORG }} \
+                --folder "$sf/sharedflowbundle" \
+                --replace
+      
+              # Deploy shared flow
+              apigeecli sharedflows deploy \
+                --org ${{ secrets.APIGEE_ORG }} \
+                --env ${{ secrets.APIGEE_ENV }} \
+                --name "$SF_NAME"
+            fi
+          done    
+    #- name: Import & Deploy SharedFlow
+    #  run: |
+    #    apigeecli sharedflows import           --org ${{ secrets.APIGEE_ORG }}           --folder sharedflows/SF-Security  
 
-        apigeecli sharedflows deploy           --org ${{ secrets.APIGEE_ORG }}           --env ${{ secrets.APIGEE_ENV }}           --name SF-Security
+     #   apigeecli sharedflows deploy           --org ${{ secrets.APIGEE_ORG }}           --env ${{ secrets.APIGEE_ENV }}           --name SF-Security
 
     # ----------------------
     # 3. API Proxies
