--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,24 +57,38 @@ jobs:
         ls -l sharedflows/
     - name: Import & Deploy All SharedFlows
       run: |
-        for sf in sharedflows/*; do
-        if [ -d "$sf/sharedflowbundle" ]; then
-        SF_NAME=$(basename "$sf")
-        echo "Deploying shared flow: $SF_NAME"
-      
-        # Import shared flow
-        apigeecli sharedflows import \
-        --org ${{ secrets.APIGEE_ORG }} \
-        --folder "$sf/sharedflowbundle" \
-        --replace
-      
-        # Deploy shared flow
-        apigeecli sharedflows deploy \
-        --org ${{ secrets.APIGEE_ORG }} \
-        --env ${{ secrets.APIGEE_ENV }} \
-        --name "$SF_NAME"
-        fi
-        done    
+        echo "Current working directory: $(pwd)"
+        echo "Listing folders for shared flows:"
+        ls -l
+  
+        # Determine path for shared flows
+        if [ -d "sharedflows" ]; then
+        SF_PATH="sharedflows/*"
+        else
+          SF_PATH="*"
+          fi
+  
+        # Loop through each folder and deploy
+         for sf in $SF_PATH; do
+            if [ -d "$sf/sharedflowbundle" ]; then
+              SF_NAME=$(basename "$sf")
+              echo "Deploying shared flow: $SF_NAME"
+  
+              # Import shared flow
+              apigeecli sharedflows import \
+                --org ${{ secrets.APIGEE_ORG }} \
+                --folder "$sf/sharedflowbundle" \
+                --replace
+  
+              # Deploy shared flow
+              apigeecli sharedflows deploy \
+                --org ${{ secrets.APIGEE_ORG }} \
+                --env ${{ secrets.APIGEE_ENV }} \
+                --name "$SF_NAME"
+            else
+              echo "Skipping $sf – no sharedflowbundle found"
+            fi
+          done 
     #- name: Import & Deploy SharedFlow
     #  run: |
     #    apigeecli sharedflows import           --org ${{ secrets.APIGEE_ORG }}           --folder sharedflows/SF-Security  
