--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -81,18 +81,11 @@ jobs:
     
     - name: Import & Deploy API Proxy (latest revision)
       run: |
-        apigeecli apis import \
-            --org ${{ secrets.APIGEE_ORG }} \
-            -f proxies/hello-world/apiproxy \
-            --default-token
+        apigeecli apis import --org ${{ secrets.APIGEE_ORG }} -f proxies/hello-world/apiproxy --default-token
       
-          LATEST_REV=$(apigeecli apis list-revisions \
-            --org ${{ secrets.APIGEE_ORG }} \
-            --name hello-world | tail -n 1)
+        LATEST_REV=$(apigeecli apis list-revisions --org ${{ secrets.APIGEE_ORG }} --name hello-world | tail -n 1)
       
-          echo "Deploying revision $LATEST_REV"
+        echo "Deploying revision $LATEST_REV"
       
-          curl -X POST \
-            -H "Authorization: Bearer $(gcloud auth print-access-token)" \
-            "https://apigee.googleapis.com/v1/organizations/${{ secrets.APIGEE_ORG }}/environments/${{ secrets.APIGEE_ENV }}/apis/hello-world/revisions/$LATEST_REV/deployments?override=true"
+        curl -X POST -H "Authorization: Bearer $(gcloud auth print-access-token)" "https://apigee.googleapis.com/v1/organizations/${{ secrets.APIGEE_ORG }}/environments/${{ secrets.APIGEE_ENV }}/apis/hello-world/revisions/$LATEST_REV/deployments?override=true"
       
