--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -84,7 +84,7 @@ jobs:
         zip -r hello-world.zip apiproxy
     - name: Import & Deploy API Proxy (latest revision)
       run: |
-        apigeecli apis import --org ${{ secrets.APIGEE_ORG }} -f proxies/hello-world/apiproxy --default-token
+        apigeecli apis import --org ${{ secrets.APIGEE_ORG }} -f proxies/hello-world.zip --default-token
       
         #LATEST_REV=$(apigeecli apis revisions list --org ${{ secrets.APIGEE_ORG }} --name hello-world | tail -n 1)
       
