--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -78,16 +78,24 @@ jobs:
     #    apigeecli apis import           --org ${{ secrets.APIGEE_ORG }}                    -f proxies/hello-world          --default-token
 
      #   apigeecli apis deploy           --org ${{ secrets.APIGEE_ORG }}           --env ${{ secrets.APIGEE_ENV }}           --name hello-world
-    - name: Zip Apigee API Proxy
+    #- name: Zip Apigee API Proxy
+    #  run: |
+    #    cd proxies/
+    #    zip -r hello-world.zip hello-world
+    #    ls -l- 
+    - name: Verify Apigee proxy structure
       run: |
-        cd proxies/
-        zip -r hello-world.zip hello-world
-        ls -l
-    - name: Import & Deploy API Proxy (latest revision)
-      run: |
-        apigeecli apis import --org ${{ secrets.APIGEE_ORG }} -f proxies/hello-world --default-token
+        ls -l proxies/hello-world
+        ls -l proxies/hello-world/apiproxy
+    
+    #- name: Import & Deploy API Proxy (latest revision)
+    #  run: |
+    #    apigeecli apis import --org ${{ secrets.APIGEE_ORG }} -f proxies/hello-world --default-token
       
-        #LATEST_REV=$(apigeecli apis revisions list --org ${{ secrets.APIGEE_ORG }} --name hello-world | tail -n 1)
+    #    #LATEST_REV=$(apigeecli apis
+    - name: Import Apigee API Proxy
+      run: |
+        apigeecli apis import --org ${{ secrets.APIGEE_ORG }} -f proxies/hello-world --default-tokenrevisions list --org ${{ secrets.APIGEE_ORG }} --name hello-world | tail -n 1)
       
         echo "Deploying latest revision "
       
