--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -92,9 +92,11 @@ jobs:
       run: |
         cd proxies/hello-world
         zip -r hello-world.zip apiproxy    
-        
-    - name: Import Apigee API Proxy
+
+    - name: Import Apigee Proxy
       run: |
-        apigeecli apis import --org ${{ secrets.APIGEE_ORG }} -f proxies/hello-world/hello-world.zip --default-token
+        ls -l proxies/hello-world/apiproxy  # sanity check
+        apigeecli apis import --org ${{ secrets.APIGEE_ORG }} -f proxies/hello-world/apiproxy  --default-token
+    
   
     
