--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -95,8 +95,8 @@ jobs:
 
     - name: Import Apigee Proxy
       run: |
-        ls -l proxies/hello-world/apiproxy  # sanity check
-        apigeecli apis import --org ${{ secrets.APIGEE_ORG }} -f proxies/hello-world/apiproxy  --default-token
+        ls -l proxies/hello-world  # sanity check
+        apigeecli apis import --org ${{ secrets.APIGEE_ORG }} -f proxies/hello-world/hello-world.zip  --default-token
     
   
     
