--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -88,15 +88,15 @@ jobs:
         ls -l proxies/hello-world
         ls -l proxies/hello-world/apiproxy
 
-    - name: Zip Apigee Proxy
-      run: |
-        cd proxies/hello-world
-        zip -r hello-world.zip apiproxy    
+    #- name: Zip Apigee Proxy
+    #  run: |
+    #    cd proxies/hello-world
+    #    #zip -r hello-world.zip apiproxy    
 
     - name: Import Apigee Proxy
       run: |
         ls -l proxies/hello-world  # sanity check
-        apigeecli apis import --org ${{ secrets.APIGEE_ORG }} -f proxies/hello-world/hello-world.zip  --default-token
+        apigeecli apis import --org ${{ secrets.APIGEE_ORG }} -f proxies/hello-world/apiproxy   --default-token
     
   
     
