--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -93,13 +93,14 @@ jobs:
     #    cd proxies/hello-world
     #    #zip -r hello-world.zip apiproxy    
 
-    - name: Import Apigee Proxy
+  #  - name: Import Apigee Proxy
+  #    run: |
+  #      ls -l proxies/hello-world  # sanity check
+  #      apigeecli apis import --org ${{ secrets.APIGEE_ORG }} -f proxies/hello-world/apiproxy   --default-token
+    
+    - name: Import Apigee Proxy list
       run: |
-        ls -l proxies/hello-world  # sanity check
-        apigeecli apis import --org ${{ secrets.APIGEE_ORG }} -f proxies/hello-world/apiproxy   --default-token
-    - name: Import Apigee Proxy
-      run: |
-        apigeecli apis list --org ${{ secrets.APIGEE_ORG }}     
+        apigeecli apis import --help     
     
   
     
