--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,106 +1,64 @@
-name: Apigee X CI/CD
+name: Deploy Apigee Proxy
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main  # Change to your branch
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
+    env:
+      APIGEE_ORG: ${{ secrets.APIGEE_ORG }}
+      APIGEE_ENV: ${{ secrets.APIGEE_ENV }}
+
     steps:
-    - name: Checkout
-      uses: actions/checkout@v4
+      - name: Checkout repo
+        uses: actions/checkout@v3
 
-    - name: Authenticate to GCP
-      uses: google-github-actions/auth@v2
-      with:
-        credentials_json: ${{ secrets.GCP_APIGEE_SA_KEY }}
+      - name: Set up apigeecli
+        run: |
+          curl -L https://github.com/apigee/apigeecli/releases/download/v2.16.0/apigeecli_linux_amd64.zip -o apigeecli.zip
+          unzip apigeecli.zip
+          chmod +x apigeecli
+          sudo mv apigeecli /usr/local/bin/apigeecli
+          apigeecli version
 
+      - name: Zip API Proxy
+        run: |
+          cd proxies/hello-world
+          zip -r hello-world.zip apiproxy
+          ls -l hello-world.zip
 
-   
-    
-    - name: Install apigeecli
-      run: |
-        curl -L https://raw.githubusercontent.com/apigee/apigeecli/main/downloadLatest.sh | sh
-        echo "$HOME/.apigeecli/bin" >> $GITHUB_PATH
+      - name: Import API Proxy
+        run: |
+          apigeecli apis import \
+            --org ${{ secrets.APIGEE_ORG }} \
+            -f proxies/hello-world/hello-world.zip \
+            --default-token \
+            --no-warnings
 
-    - name: Verify apigeecli
-      run: |
-        which apigeecli
-        apigeecli --help
-          
-          
-    # ----------------------
-    # 1. KVMs
-    # ----------------------
-    #- name: Create / Update KVMs
-    #  run: |
-    #    KVM_NAME=$(jq -r '.name' configs/dev/kvms.json)
+      - name: Verify import
+        run: |
+          echo "APIs in org:"
+          apigeecli apis list --org ${{ secrets.APIGEE_ORG }}
 
-     #   apigeecli kvms create           --org ${{ secrets.APIGEE_ORG }}           --env ${{ secrets.APIGEE_ENV }}           --name $KVM_NAME || true
+      - name: Get latest revision
+        id: get_rev
+        run: |
+          LATEST_REV=$(apigeecli apis revisions list \
+            --org ${{ secrets.APIGEE_ORG }} \
+            --name hello-world \
+            --format json | jq -r 'max')
+          echo "LATEST_REV=$LATEST_REV" >> $GITHUB_ENV
+          echo "Latest revision: $LATEST_REV"
 
-      #  jq -r '.entries | to_entries[] | "\(.key)=\(.value)"' configs/dev/kvms.json |
-       # while IFS='=' read key value; do
-        #  apigeecli kvms entries create             --org ${{ secrets.APIGEE_ORG }}             --env ${{ secrets.APIGEE_ENV }}             --kvm $KVM_NAME             --name "$key"             --value "$value" || true
-        #done
-
-    # ----------------------
-    # 2. SharedFlows
-    # ----------------------
-    - name: Verify Apigee access
-      run: |
-        apigeecli organizations list
-    - name: List sharedflows folder
-      run: |
-        echo "Current working directory: $(pwd)"
-        ls -l sharedflows/
-    #- name: Deploy Shared Flow
-    #  run: |
-    #    apigeecli sharedflows bundle \
-    #        -n SF-Security \
-    #        --folder "$sf/sharedflowbundle" \
-    #        --org ${{ secrets.APIGEE_ORG }} \
-    #        --env ${{ secrets.APIGEE_ENV }}
-    #        --token ${{ steps.auth.outputs.access_token }} \
-    #        --ovr --wait
-    #- name: Import & Deploy SharedFlow
-    #  run: |
-    #    apigeecli sharedflows import           --org ${{ secrets.APIGEE_ORG }}           --folder sharedflows/SF-Security  
-
-     #   apigeecli sharedflows deploy           --org ${{ secrets.APIGEE_ORG }}           --env ${{ secrets.APIGEE_ENV }}           --name SF-Security
-
-    # ----------------------
-    # 3. API Proxies
-    # ----------------------
-    #- name: Import & Deploy API Proxy
-    #  run: |
-    #    apigeecli apis import           --org ${{ secrets.APIGEE_ORG }}                    -f proxies/hello-world          --default-token
-
-     #   apigeecli apis deploy           --org ${{ secrets.APIGEE_ORG }}           --env ${{ secrets.APIGEE_ENV }}           --name hello-world
-    #- name: Zip Apigee API Proxy
-    #  run: |
-    #    cd proxies/
-    #    zip -r hello-world.zip hello-world
-    #    ls -l- 
-    - name: Verify Apigee proxy structure
-      run: |
-        ls -l proxies/hello-world
-        ls -l proxies/hello-world/apiproxy
-
-    #- name: Zip Apigee Proxy
-    #  run: |
-    #    cd proxies/hello-world
-    #    #zip -r hello-world.zip apiproxy    
-
-  #  - name: Import Apigee Proxy
-  #    run: |
-  #      ls -l proxies/hello-world  # sanity check
-  #      apigeecli apis import --org ${{ secrets.APIGEE_ORG }} -f proxies/hello-world/apiproxy   --default-token
-    
-    - name: Import Apigee Proxy list
-      run: |
-        apigeecli apis import --help     
-    
-  
-    
+      - name: Deploy API Proxy
+        run: |
+          apigeecli apis deploy \
+            --org ${{ secrets.APIGEE_ORG }} \
+            --env ${{ secrets.APIGEE_ENV }} \
+            --name hello-world \
+            --rev ${{ env.LATEST_REV }} \
+            --default-token
