--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,48 +17,17 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Set up apigeecli
+      - name: Download and install apigeecli v2.16.0
         run: |
-          curl -L https://github.com/apigee/apigeecli/releases/download/v2.16.0/apigeecli_linux_amd64.zip -o apigeecli.zip
+          curl -L \
+            https://github.com/apigee/apigeecli/releases/download/v2.16.0/apigeecli_v2.16.0_Linux_x86_64.zip \
+            -o apigeecli.zip
           unzip apigeecli.zip
           chmod +x apigeecli
-          sudo mv apigeecli /usr/local/bin/apigeecli
+          sudo mv apigeecli /usr/local/bin/
           apigeecli version
 
       - name: Zip API Proxy
         run: |
           cd proxies/hello-world
-          zip -r hello-world.zip apiproxy
-          ls -l hello-world.zip
-
-      - name: Import API Proxy
-        run: |
-          apigeecli apis import \
-            --org ${{ secrets.APIGEE_ORG }} \
-            -f proxies/hello-world/hello-world.zip \
-            --default-token \
-            --no-warnings
-
-      - name: Verify import
-        run: |
-          echo "APIs in org:"
-          apigeecli apis list --org ${{ secrets.APIGEE_ORG }}
-
-      - name: Get latest revision
-        id: get_rev
-        run: |
-          LATEST_REV=$(apigeecli apis revisions list \
-            --org ${{ secrets.APIGEE_ORG }} \
-            --name hello-world \
-            --format json | jq -r 'max')
-          echo "LATEST_REV=$LATEST_REV" >> $GITHUB_ENV
-          echo "Latest revision: $LATEST_REV"
-
-      - name: Deploy API Proxy
-        run: |
-          apigeecli apis deploy \
-            --org ${{ secrets.APIGEE_ORG }} \
-            --env ${{ secrets.APIGEE_ENV }} \
-            --name hello-world \
-            --rev ${{ env.LATEST_REV }} \
-            --default-token
+          zip -r hello-world.zi
