--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -87,7 +87,8 @@ jobs:
    
     - name: Import Apigee Proxy
       run: |
-        apigeecli apis import -f hello-world.zip --org ${{ secrets.APIGEE_ORG }} --default-token
+        apigeecli version
+        apigeecli apis import -f proxies/hello-world/apiproxy --org $APIGEE_ORG --default-token
     
     - name: Verify Import
       run: |
